Cleanup and implement basic command executor, actually builds now

--- a/example-config.yml
+++ b/example-config.yml
@@ -1,11 +1,10 @@
-reviewerLabelPrefix: r=
+reviewLabelPrefix: r=
 reviewers:
   - someone
   - another
-
-numReviewersRequired: 2
-numReviewersOverrides:
-  - tests: 1
+numReviewsRequired: 2
+numReviewsOverrides:
+  tests: 1
 
 mergeScript: bash example-merger.sh
 
@@ -13,6 +12,6 @@ github:
   user: merge-bot
   token: um
   repo: user/repo
+  apiBase: https://api.github.com
 
 webhookServerAddr: localhost:2020
-ghAPIBase: https://api.github.com
